--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
   <head meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
 
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+
   <!-- <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000"> -->
