--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
 
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
