adding description oops

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,8 @@
     -->
 
     <title>Bailey Siber</title>
+    <meta name="description" content="Bailey Siber is a leader, project manager, and software engineer working at the intersections of tech, advocacy, and health."
+
   </head>
   <body>
     <noscript>
