--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     -->
 
     <title>Bailey Siber</title>
-    <meta name="description" content="Bailey Siber is a leader, project manager, and software engineer working at the intersections of tech, advocacy, and health."
+    <meta name="description" content="Bailey Siber is a leader, project manager, and software engineer working at the intersections of tech, advocacy, and health." >
 
   </head>
   <body>
