--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css2?family=Karla&display=swap" rel="stylesheet">
 
+    <meta name="description" content="Reducing disparities in quality of life & health outcomes by
+     working at the intersections of technology, advocacy & health.">
 
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 
