v3 ish of site goin up

--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset=“UTF-8”>
 
     <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css2?family=Karla&display=swap" rel="stylesheet">
 
     <meta name="description" content="Reducing disparities in quality of life & health outcomes by
      working at the intersections of technology, advocacy & health.">
+
+
 
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 
