--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,7 @@
     <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css2?family=Karla&display=swap" rel="stylesheet">
 
-    <meta name="description" content="Reducing disparities in quality of life & health outcomes by
-     working at the intersections of technology, advocacy & health.">
+    <meta name="description" content="Addressing spatial and economic inequities in cities through housing, third spaces, and workforce development initiatives.">
 
 
 
