--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    <title>Bailey Siber</title>
+    <title>bailey siber</title>
 
   </head>
   <body>
