--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
     <meta charset=“UTF-8”>
 
     <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
-    <link href="https://fonts.googleapis.com/css2?family=Karla&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Karla" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet" type="text/css"/ >
 
     <meta name="description" content="Addressing spatial and economic inequities in cities through housing, third spaces, and workforce development initiatives.">
 
