--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta charset=“UTF-8”>
 
     <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 
     <meta name="description" content="Addressing spatial and economic inequities in cities through housing, third spaces, and workforce development initiatives.">
 
