--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 
-    <meta name="description" content="Addressing spatial and economic inequities in cities through housing, third spaces, and workforce development initiatives.">
+    <meta name="description" content="">
 
 
 
